# dga-sentinel

./: .dockerignore  .env.example  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  app.py  docker-compose.dev.yml  docker-compose.yml  predict.py  pyproject.toml  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.specify/memory/: constitution.md
DGA-DataSet/: 360_dga.txt  README.md
agent_layer/: base_agent.py  fc_security.py  orchestrator.py
agent_layer/a2a/: protocol.py
agent_layer/agents/: explain_agent.py  response_agent.py  threat_intel_agent.py  triage_agent.py
agent_layer/rag/: embedding.py  ingest.py
agent_layer/text2sql/: schema_registry.py
artifacts/: README.md
artifacts/binary/: binary.py
artifacts/multi/: multy.py
dag_engine/: checkpoint.py  loader.py
dag_engine/pipelines/: dga_batch.yaml
dag_engine/tests/: test_checkpoint.py  test_loader.py  test_nodes.py
deploy/elasticsearch/: init_vectors.py
deploy/init-scripts/: pg-init.sql  starrocks-tables.sql
deploy/migrations/: 001_init.sql  002_feedback_family.sql
deploy/prometheus/: alert_rules.yml  prometheus.yml
dga_generate/bumblebee/: dga.py
dga_generate/chinad/: dga.py
dga_generate/corebot/: dga.py  domains.txt
dga_generate/darkcracks/: domains.txt
dga_generate/dircrypt/: dga.py  domains.txt
dga_generate/dmsniff/: dga.py
dga_generate/dnschanger/: dga.py
dga_generate/fosniw/: domains.txt
dga_generate/locky/: dgav2.py
dga_generate/m0yv/: dga.py  domains.txt
dga_generate/necurs/: dga.py  domains.txt
dga_generate/newgoz/: dga.py
dga_generate/nymaim/: domains.txt
dga_generate/padcrypt/: domains.txt
dga_generate/pitou/: dga.py  domain.txt
dga_generate/proslikefan/: dga.py  domains.txt
dga_generate/qadars/: dga.py  domains.txt
dga_generate/ramdo/: dga.py  domains.txt
dga_generate/ramnit/: dga.py
dga_generate/reconyc/: dga.py
dga_generate/sharkbot/: dga.py
dga_generate/shiotob/: domains.txt
dga_generate/simda/: dga.py  domains.txt
dga_generate/sisron/: dga.py
dga_generate/tinba/: domains.txt
dga_generate/tufik/: dga.py  domains.txt
dga_generate/vawtrak/: domains.txt
dga_generate/verblecon/: domains.txt
dga_generate/zloader/: dga.py
frontend/: Dockerfile  e2e-comprehensive-test.ts  e2e-crud-test.ts  e2e-dag-redesign.ts  e2e-full-test.ts  e2e-pipeline-test.ts  e2e-test-v2.ts  e2e-test.ts  full-test.spec.ts  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/screenshots/: test-report.json
frontend/screenshots-v2/: report.json
frontend/src/: App.tsx  main.tsx
gateway/: Dockerfile  starrocks_client.py
gateway/middleware/: security.py
gateway/routers/: agents.py  dag.py  dashboard.py  feedback.py  health.py  reports.py  score.py
gateway/tests/: test_middleware.py
legacy/: README.md
research/: README.md
research/statistics/: dga_domain_box_distribution.py  dga_domain_length_distribution.py  normal_domain_char_distribution.py  normal_domain_length_distribution.py  reconyc_domain_char_distribution.py  vawtrak_domain_char_distribution.py
scoring_service/: main.py
scoring_service/features/: lexical.py  nxdomain.py
scoring_service/models/: binary_model.py  multi_model.py  registry.py
scoring_service/proto/: scoring_pb2.py  scoring_pb2_grpc.py
scripts/: platform.sh  seed_data.py  seed_drift_baseline.py  setup_pipelines.py  simulate_traffic.py  snapshot.sh  test_feedback_loop.py  train_binary_cnn.py  train_binary_xgb.py
shared/: config.py
src/business/: Dockerfile  db.py  main.py  starrocks_client.py
src/common/: __init__.py  config.py  constants.py  observability.py  schemas.py  starrocks.py
src/dag/: Dockerfile  checkpoint.py  engine.py  loader.py  runtime.py
static/css/: styles.css
statistics/: count.py  dga_domain_char_distribution.py  dga_family_sandiantu.py
templates/: index.html
tests/: test_architecture.py
tests/e2e/: test_e2e.sh  test_full_pipeline.py  test_full_pipeline_real.py
tests/integration/: test_agent_pipeline.py  test_alerts_grouped.py  test_docker_services.py  test_m0_connectivity.py  test_performance.py  test_pipeline_flow.py  test_rag_query.py  test_scoring_api.py  test_scoring_cache.py  test_security.py  test_text2sql.py  test_trace_id.py  (+1 more)
(+354 files in other folders)
